--- a/Entrepreneur.html
+++ b/Entrepreneur.html
@@ -224,7 +224,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="image1" style="background-image: url(image/younes.jpg);">
 								<div class="Envelope1">
-									<h2>Younes Khdeir Betewi</h2>
+									<h2>Younes Khdeir Al-Betawi</h2>
 									<span class="category">President of the Entrepreneurs Association</span>
 								</div>
 							</div>
@@ -402,7 +402,7 @@
 							<div class="add p-4 mb-3 bg-white">
 								<div class="image mb-3" style="background-image: url(image/zz.png); height:500px;"></div>
 								<p class="mb-0 font-weight-bold">Address</p>
-								<p class="mb-3">Rafidia St. Najah National University, Nablus, California, Palestine</p>
+								<p class="mb-3">Rafidia St. Najah National University, Nablus, Palestine</p>
 								<p class="mb-0 font-weight-bold">Phone</p>
 								<p class="mb-3"><a href="#">+970597303718</a></p>
 								<p class="mb-0 font-weight-bold">Email Address</p>
